# wamv_gz_RdS

./: CMakeLists.txt  README.md  package.xml
config/: wamv_nav2_params.yaml
launch/: wamv.launch.py  wamv_launch.py  wamv_launch_all_nodes.py  wamv_nav2_launch.py
models/vessel_E/: model.config  model.sdf
scripts/: startup.sh
src/: camera_picture.py  wamv_camera_YOLO.py  wamv_pid_control.py
worlds/: wamv_world.sdf  wamv_world_modified.sdf
